crates/macro-tools/tests/ui/builder/fail/skip_without_default.rs
use picea_macro_tools::Builder;

#[derive(Builder)]
struct Meta {
    #[builder(skip)]
    hidden: String,
}

fn main() {}
